--- a/pom-socket-message-transfer/.gitignore
+++ b/pom-socket-message-transfer/.gitignore
@@ -9,6 +9,7 @@
 .settings
 .springBeans
 .sts4-cache
+*.log
 
 ### IntelliJ IDEA ###
 .idea
@@ -24,3 +25,4 @@
 /nbdist/
 /.nb-gradle/
 target/
+/logs/
