--- a/pom-socket-message-transfer/pom.xml
+++ b/pom-socket-message-transfer/pom.xml
@@ -62,9 +62,12 @@
 		    <version>${log4j.version}</version>
 		</dependency>
 		
-		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
+		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+		<!-- <dependency>
+		    <groupId>com.google.code.gson</groupId>
+		    <artifactId>gson</artifactId>
+		</dependency> -->
 				
-		
 		
 	</dependencies>
 
