--- a/pom-socket-message-transfer/config/SDKLOG4J.properties
+++ b/pom-socket-message-transfer/config/SDKLOG4J.properties
@@ -1,11 +1,11 @@
 log4j.rootLogger=FINEST
 
 
-log4j.logger.POM_SDK=FINEST#com.avaya.ept.pom.LogLevel, POMSDKAppender,console
+log4j.logger.POM_SDK=FINEST#com.avaya.ept.pom.log.LogLevel, POMSDKAppender,console
 
 
 log4j.rootCategory=POMSDKAppender,console
-log4j.category.core=FINEST#com.avaya.ept.pom.LogLevel
+log4j.category.core=FINEST#com.avaya.ept.pom.log.LogLevel
 
 
 log4j.appender.POMSDKAppender=org.apache.log4j.RollingFileAppender
